适配 1.20.1 Fabric 粒子渲染与集成