@@ -3,7 +3,7 @@ package org.mesdag.particlestorm.data.component;
 import com.mojang.datafixers.util.Either;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import net.minecraft.resources.Identifier;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.ExtraCodecs;
 import net.minecraft.util.Mth;
 import org.mesdag.particlestorm.api.IMolangParticleInstance;
@@ -36,16 +36,16 @@ import java.util.function.Function;
 /// @param expireOnContact          Triggers expiration on contact if true
 /// @param events                   Triggers an event array of individual events
 public record ParticleMotionCollision(BoolMolangExp enabled, float collisionDrag, float coefficientOfRestitution, float collisionRadius, boolean expireOnContact, List<Event> events) implements IParticleComponent {
-    public static final Identifier ID = Identifier.withDefaultNamespace("particle_motion_collision");
+    public static final ResourceLocation ID = new ResourceLocation("particle_motion_collision");
     public static final Codec<ParticleMotionCollision> CODEC = RecordCodecBuilder.create(instance -> instance.group(
-            BoolMolangExp.CODEC.lenientOptionalFieldOf("enabled", BoolMolangExp.TRUE).forGetter(ParticleMotionCollision::enabled),
-            Codec.FLOAT.lenientOptionalFieldOf("collision_drag", 0.0F).forGetter(ParticleMotionCollision::collisionDrag),
-            Codec.FLOAT.lenientOptionalFieldOf("coefficient_of_restitution", 0.0F).forGetter(ParticleMotionCollision::coefficientOfRestitution),
-            Codec.FLOAT.lenientOptionalFieldOf("collision_radius", 0.0F).forGetter(ParticleMotionCollision::collisionRadius),
-            Codec.BOOL.lenientOptionalFieldOf("expire_on_contact", false).forGetter(ParticleMotionCollision::expireOnContact),
+            BoolMolangExp.CODEC.optionalFieldOf("enabled", BoolMolangExp.TRUE).forGetter(ParticleMotionCollision::enabled),
+            Codec.FLOAT.optionalFieldOf("collision_drag", 0.0F).forGetter(ParticleMotionCollision::collisionDrag),
+            Codec.FLOAT.optionalFieldOf("coefficient_of_restitution", 0.0F).forGetter(ParticleMotionCollision::coefficientOfRestitution),
+            Codec.FLOAT.optionalFieldOf("collision_radius", 0.0F).forGetter(ParticleMotionCollision::collisionRadius),
+            Codec.BOOL.optionalFieldOf("expire_on_contact", false).forGetter(ParticleMotionCollision::expireOnContact),
             Codec.either(Event.CODEC, Codec.list(Event.CODEC)).xmap(
                     either -> either.map(Collections::singletonList, Function.identity()),
-                    l -> l.size() == 1 ? Either.left(l.getFirst()) : Either.right(l)
+                    l -> l.size() == 1 ? Either.left(l.get(0)) : Either.right(l)
             ).fieldOf("events").orElseGet(List::of).forGetter(ParticleMotionCollision::events)
     ).apply(instance, ParticleMotionCollision::new));
 
