@@ -47,8 +47,7 @@ public class ExtendMutableSpriteSet implements SpriteSet {
         return sprites.get(random.nextInt(sprites.size()));
     }
 
-    @Override
     public TextureAtlasSprite first() {
-        return sprites.isEmpty() ? missing : sprites.getFirst();
+        return sprites.isEmpty() ? missing : sprites.get(0);
     }
 }
